# pandas-should

./: .gitignore  README.md  setup.cfg  setup.py
examples/: helloworld.py  test_helloworld.py
pandas_should/: __init__.py  dataframe.py  series.py
tests/: test_dataframe.py  test_series.py
