[metadata]
name = pandas-should
version = attr:pandas_should.__version__
author = momijiame
description = pandas extension for asserting
long_description = file:README.md
url = https://github.com/momijiame/pandas-should
license = Apache License, Version 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    pandas
zip_safe = False
include_package_data = True
packages = find:
entry_points = file:entry_points.cfg

[options.extras_require]
testing =
    pandas
    pytest
develop =
    pandas
    pytest

[options.packages.find]
exclude =
    tests
    examples

[tool:pytest]
addopts =
    -v

[flake8]
exclude =
    .git,
    .eggs,
    __pycache__,
    build,
    dist
max-complexity = 10
max-line-length = 99

[wheel]
universal = 0
